@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.610 2010/05/29 19:16:50 nm4 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.611 2010/05/29 19:23:26 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -38,6 +38,9 @@ MH/01 Treat the transport option dkim_domain as a colon separated
 
 NM/07 Null terminate DKIM strings, Null initialise DKIM variable
       Bugzilla 985, 986.  Patch by Simon Arlott
+
+NM/08 Bugzilla 967. DKIM DNS TXT record bug fix
+      Patch by Simon Arlott
 
 
 Exim version 4.71
